<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/blue_background">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@null"
        app:srcCompat="@mipmap/pink_sbi_title" />

    <EditText
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/age_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name_text"
        android:layout_alignStart="@id/name_text"
        android:layout_below="@+id/name_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/date_of_birth"
        android:inputType="datetime"
        android:padding="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/city_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/age_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/occupation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/city_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/occupation"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/qualification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/occupation_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/qualification"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/annual_income_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/qualification_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:inputType="number"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/annual_income"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic"  />

    <EditText
        android:id="@+id/pan_card_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/annual_income_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/pan_card"
        android:textColorHint="@android:color/holo_green_light"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/email_id_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/pan_card_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/email_id"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:inputType="textEmailAddress"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/password_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/email_id_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:inputType="textPassword"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/name_text"
        android:layout_alignLeft="@+id/name_text"
        android:layout_below="@+id/password_check"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/background_light"
        android:padding="5dp"
        android:hint="@string/phone_number"
        android:textColor="@android:color/holo_red_dark"
        android:textColorHint="@android:color/holo_green_light"
        android:ems="10"
        android:inputType="phone"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:onClick="onSignUpButton"
        app:srcCompat="@mipmap/sign_up" />

</RelativeLayout>
</ScrollView>