<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/blue_background">

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            android:background="@null"
            app:srcCompat="@mipmap/pink_sbi_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/admin_sign_in"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_id_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/email_id_check"
            android:layout_alignRight="@+id/email_id_check"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/email_id_check"
            android:layout_marginTop="29dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/admin_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_check"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="51dp"
            android:background="@null"
            android:onClick="onAdminSignInButton"
            app:srcCompat="@mipmap/admin_small" />
    </RelativeLayout>
</ScrollView>