<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/blue_background"
        android:orientation="vertical">


        <TextView
            android:id="@+id/member_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:padding="5dp"
            android:text="@string/member"
            android:textAlignment="center"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:text="@string/new_name"
                android:textSize="14sp"
                 />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_date_of_birth"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/age_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_city"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/city_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_occupation"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/occupation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_qualification"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qualification_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_annual_income"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/annual_income_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_pan_card"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pan_card_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_email_id"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_id_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_password"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/password_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/background_light"
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="@string/new_phone_no"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:fontFamily="casual"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:textStyle="bold"
                android:background="@android:color/background_light"
                android:id="@+id/phone_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="KULDEEP"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/delete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onDeleteButton"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>
